Practice02/src/style/sass/components/_banner-logo.scss
.banner__logo {
  justify-content: space-evenly;
  margin-top: 13px;
  display: flex;
  gap: 32git px;
  margin-left: 19px;
}

.google {
  width: 56px;
  height: 18px;
}

.airbnb {
  width: 56px;
  height: 17px;
}

.facebook {
  width: 53.17px;
  height: 11px;
}

.hubspot {
  width: 56px;
  height: 16px;
}

.slack {
  display: none;
}

.google,
.airbnb,
.hubspot {
  margin-top: 2px;
}

.google img,
.airbnb img,
.facebook img,
.hubspot img,
.slack img {
  cursor: pointer;
  object-fit: fill;
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 992px) {
  .banner__logo {
    justify-content: space-between;
    margin-top: 23px;
    display: flex;
    align-items: center;
    gap: 66px;
    width: 105%;
  }

  .google {
    width: 80px;
    height: 26px;
    margin-left: 4px;
  }

  .airbnb {
    width: 80px;
    height: 25px;
    margin-right: 3px;
  }

  .facebook {
    width: 77px;
    height: 16px;
    margin-right: 7px;
  }

  .hubspot {
    width: 80px;
    height: 23px;
    margin-right: 10px;
  }

  .slack {
    display: block;
    width: 80px;
    height: 20px;
    margin-right: 3px;
  }

  .google,
  .airbnbbnb,
  .facebook,
  .hubspot,
  .slack img {
    cursor: pointer;
  }
}

@media only screen and (min-width: 1400px) {
  .google,
  .airbnbbnb,
  .hubspot {
    margin-top: 0px;
  }
}

